<resources>
    <string name="app_name">BooksBay</string>
    <string name="network_error_message">Network Error</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="action_continue">Continue</string>
    <string name="display_name">Display name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_failed">Failed to register new account. </string>
    <string name="field_required_error">This field is required.</string>
    <string name="invalid_email_error">This email address is invalid.</string>
    <string name="invalid_password_error">This password is too short.</string>
    <string name="email_verification_sent">Email verification sent. Please verify your email to continue using this app.</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="users">users</string>
    <string name="user_account_settings">user_account_settings</string>
    <string name="email_verification_error">Could not send email verification. Please try again later.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="set_your_location">Set your location</string>
    <string name="set_location">Set location</string>
    <string name="passwords_dont_match">Password does not match</string>
    <string name="log_out">Log out</string>
    <string name="confirm_logout">Confirm log out</string>
    <string name="confirm_logout_message">Are you sure you want to log out?</string>
    <string name="home_navigation_button">Home navigation button</string>
    <string name="messages_navigation_button">Messages navigation button</string>
    <string name="camera_navigation_button">Camera navigation button</string>
    <string name="profile_navigation_button">Profile navigation button</string>
    <string name="menu_navigation_button">Menu navigation button</string>
    <string name="invalidUserErrorMessage">Email does not exist in our database. Please create a new account.</string>
    <string name="invalidCredentialsErrorMessage">Password is invalid. Please try again.</string>
    <string name="signInErrorMessage">Could not fetch data. Please try again later.</string>
    <string name="emailNotVerifiedErrorMessage">Email is not verified. Please check your inbox.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="title_activity_messages">Messages</string>
    <string name="welcome_string">Welcome</string>
    <string name="user_profile_picture">user_profile_picture</string>
    <string name="profile">Profile</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="booksbay_logo">booksbay logo</string>

    <array name="menu_items">
        <item>Account</item>
        <item>Notifications</item>
        <item>Blocked users</item>
        <item>About</item>
    </array>

    <string name="title_activity_intro">IntroActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
