<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="bottom"
    android:layout_gravity="bottom"
    android:paddingBottom="10dp"
    android:paddingTop="8dp">

    <ImageView
        android:id="@+id/navigation_home"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/home_navigation_button"
        android:src="@drawable/ic_home"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        />

    <ImageView
        android:id="@+id/navigation_messages"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_chat"
        android:contentDescription="@string/messages_navigation_button"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        />

    <ImageView
        android:id="@+id/navigation_camera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_camera"
        android:contentDescription="@string/camera_navigation_button"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        />

    <ImageView
        android:id="@+id/navigation_profile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/profile_navigation_button"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        />

    <ImageView
        android:id="@+id/navigation_menu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_menu"
        android:contentDescription="@string/menu_navigation_button"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        />


</LinearLayout>